<resources>
    <string name="app_name">Courier</string>
    <string name="authorization">АВТОРИЗАЦИЯ</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="to_come_in">Войти</string>
    <string name="f_a_q">F.A.Q</string>
    <string name="too">ТОО “Union Service company”,2021</string>
    <string name="error_unknown_title">Произошла ошибка!</string>
    <string name="dialog_ok">Ок!</string>
    <string name="dialog_exit">Выйти</string>
    <string name="error_no_internet_title">Отсутствует интернет соединение</string>
    <string name="error_no_internet_msg">Пожалуйста проверьте ваше интернет соединение и попробуйте ещё раз</string>
    <string name="notifications">Уведомления</string>
    <string name="training">Обучение</string>
    <string name="information">Информация</string>
    <string name="output">Выход</string>
    <string name="surname">загрузка…</string>
    <string name="id">загрузка…</string>
    <string name="payments">Выплаты</string>
    <string name="number">18</string>
    <string name="loading">загрузка…</string>
    <string name="press_back_again_to_exit">Для выхода снова нажмите «Назад».</string>
    <string name="text_number">0</string>
    <string name="orders">Заказы</string>
    <string name="on_the_line">На линии</string>
    <string name="current_orders">Текущие заказы</string>
    <string name="new_orders">Новые заказы</string>
    <string name="accept_order">ПРИНЯТЬ ЗАКАЗ</string>
    <string name="retail_name">Название ретейла:</string>
    <string name="address">Адрес:</string>
    <string name="time">Время:</string>
    <string name="profile">Профиль</string>
    <string name="earnings">Заработок</string>
    <string name="history">История</string>
    <string name="payouts">Выплаты</string>
    <string name="earned">Заработано</string>
    <string name="order">Заказов</string>
    <string name="history_of_orders">История заказов</string>
    <string name="order4478">Заказы 4478</string>
    <string name="cancel_order">Отмена заказа</string>
    <string name="add_photo">+ Добавить фото</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="empty_order_list">Список заказов пуст</string>
    <string name="order_list">Состав заказа</string>
    <string name="client">Клиент</string>
    <string name="timur">Тимур</string>
    <string name="street">Ул. Рыскулова, 84</string>
    <string name="order_number">Номер заказа:</string>
    <string name="arrived_restaurant">ПРИБЫЛ В РЕСТОРАН</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Отмена</string>
    <string name="the_data_you_entered_is_incorrect">Введенные Вами данные некорректны!</string>
    <string name="error_auth_wrong_data_title">Авторизация не пройдена</string>
    <string name="error_auth_wrong_data_msg">Вы ввели неверный логин или пароль</string>
    <string name="dialog_retry">Ещё раз</string>
    <string name="error_unknown_body">Пожалуйста проверьте интернет соединени или попробуйте позднее</string>
    <string name="clientNo">Клиент не вышел на связь</string>
    <string name="cancellations">Отмена заказа</string>
    <string name="photo">+Добавить фото</string>
    <string name="comment">Добавить комментарий</string>
    <string name="faq">F.A.Q</string>
    <string name="union_service_company">ТОО “Union Service company”, 2021</string>
    <string name="pause">Пауза</string>
    <string name="finish">Завершить</string>

    //Order Status
    <string name="take_order">ЗАБРАЛ ЗАКАЗ</string>
    <string name="arrived_to_the_client">ПРИБЫЛ К КЛИЕНТУ</string>
    <string name="given_to_the_client">ОТДАЛ КЛИЕНТУ</string>

</resources>