<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
                <group
                    android:id="@+id/nav_g0"
                    android:checkableBehavior="single">
                        <item
                            android:id="@+id/ordersFragment"
                            android:title="@string/orders"/>
                </group>
                <group
                    android:id="@+id/nav_g1"
                    android:checkableBehavior="single">
                        <item
                            android:id="@+id/notifications"
                            android:title="@string/notifications"/>
                </group>
                <group
                    android:id="@+id/nav_g2"
                    android:checkableBehavior="single">
                        <item
                            android:id="@+id/training"
                            android:title="@string/training"/>
                </group>
                <group
                    android:id="@+id/nav_g3"
                    android:checkableBehavior="single">
                        <item
                            android:id="@+id/information"
                            android:title="@string/information"/>
                </group>
                <group
                    android:id="@+id/nav_g4"
                    android:checkableBehavior="single">
                        <item
                            android:id="@+id/output"
                            android:title="@string/output"/>
                </group>
        </group>
</menu>