<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_on_back_pressed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimens_10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_arrow_back"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_30dp"
                    android:text="@string/orders"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/tv_cancellations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancellations"
        android:textSize="@dimen/dimens_16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:layout_marginTop="@dimen/dimens_21dp"
        android:layout_marginStart="@dimen/dimens_18dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/ll_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancellations"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dimens_18dp"
        android:layout_marginTop="@dimen/dimens_14dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:layout_marginStart="@dimen/dimens_18dp"
            android:layout_marginTop="@dimen/dimens_18dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textSize="@dimen/dimens_16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ll_add_photo"
        android:layout_marginTop="@dimen/dimens_21dp"
        android:layout_marginStart="@dimen/dimens_18dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/tv_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimens_11dp"
        android:layout_marginHorizontal="@dimen/dimens_18dp"/>
    <LinearLayout
        android:id="@+id/ll_client_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_orange"
        android:padding="@dimen/dimens_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_16sp" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#54000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_white_foreground" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

